public/css/style.css
/* ... */
button:hover {
  color: var(--fluo);
}

.input-wrapper {
  display: inline-block;
  position: relative;
  align-items: center;
  animation: tracking-in-expand 0.7s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
  box-shadow: 10px 10px 21px 0px rgba(0, 0, 0, 0.48);
}

input[type="text"],
input[type="number"],
input[type="date"] {
  width: 400px;
  padding: 15px;
  padding-left: 35px;
  padding-right: 35px;
  border-radius: 5px;
  background-color: var(--aside-back);
  border: 1px solid var(--ligh-black);
  border-radius: 5px;
  color: lightgray;
  box-shadow: 10px 10px 28px 0px rgba(0, 0, 0, 0.31);
  outline: none;
}

.edit-input {
  margin-top: 20px;
  margin-bottom: 40px;
}

.settings {
  margin-top: 0;
  padding-top: 0;
}

.cs-img {
  background-image: url(../assets/images/coming-soon2.png);
  width: 100%;
  height: 100%;
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
}

.cs-img:hover {
  filter: drop-shadow(0 0 0.75rem rgba(13, 255, 0, 0.277));
  transition: all 0.3s ease-out;
}

.fa-highlighter {
  margin-left: 10px;
  color: white;
}

.progress-bar {
  width: 100%;
  background-color: #f1f1f1;
  height: 30px;
  display: flex;
}

.progress {
  height: 100%;
  background-color: #4CAF50;
}

.input-wrapper input i {
  color: var(--fluo)
}

.input-wrapper:after {
  font-family: 'FontAwesome';
  content: '\f002';
  position: absolute;
  right: 10px;
  top: 15px;
  color: var(--fluo);
  outline: none;
}

.search {
  width: auto;
  padding: 20px;
  border-radius: 20px;
  display: flex;
  align-items: center;
  gap: 2rem;
  justify-content: center;
}

.main-sort {
  display: flex;
  gap: 1rem;
}

.marketValue {
  color: var(--fluo);
  font-size: 30px;
  margin-top: 0;
  font-weight: bold;
}

.error-text {
  font-size: 20rem;
  display: flex;
  flex-direction: row;
  align-items: center;
  margin: 0px;

}

.error-p {
  color: white;
}

.error-main {
  height: 100vh;
  width: 100vw;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.main-error {
  display: flex;
  flex-direction: column;
  align-items: center;

}

label {
  color: white;
}



.edit-icon:hover {
  color: #00F652
}

.voetbal {
  background-image: url(../assets/images/voetbal.png);
  width: 200px;
  height: 200px;
  background-size: contain;
}

.light-hover:hover {
  filter: drop-shadow(0 0 0.75rem rgba(13, 255, 0, 0.277));
  transition: all 0.3s ease-out;
}

.td-link {
  color: white;
  cursor: pointer;
}

@media screen and (max-width: 1230px) {
  input[type="text"] {
    width: 200px;
  }
}

@media screen and (max-width: 1060px) {
  .item p {
    display: none;
  }

  .item a {
    justify-content: center;
    padding: 40px;
    padding-top: 10px;
    padding-bottom: 10px;
    height: 5rem;
  }

  input[type="text"] {
    width: 544.7px;
  }

  aside {
    min-width: none;
    width: 10vw;
  }

  th.mobile-td {
    display: none;
  }

  td.mobile-td {
    display: none;
  }

  /* .top-logo img {
    width: 100px;
  } */

  .search {
    justify-content: center;
    display: flex;
    flex-direction: column;
  }
}

@media screen and (max-width: 890px) {
  .item p {
    display: none;
  }

  .search {
    width: 100%;
    gap: 1rem;
  }

  .main-sort {
    display: flex;
    gap: 10px;
  }

  aside {
    min-width: none;
    min-width: 170px;
  }

  .top-logo img {
    width: 100px;
    padding: 0;
  }

  .top-logo {
    width: 100px;
    padding: 10px;
  }

  .search {
    justify-content: center;
    display: flex;
    flex-direction: column;
  }
}

@media screen and (max-width: 750px) {
  body {
    display: flex;
    background-image: radial-gradient(#00f6525e 0.5px, transparent 0.5px), radial-gradient(#00f6525e 0.5px, #1e1e1e 0.5px);

  }

  aside {
    width: 100%;
    position: static;
    height: auto;
    border-right: none;
    outline-right: none;
  }

  aside section {
    flex-direction: column-reverse;
    border-bottom: 2px solid var(--ligh-black);

  }

  aside section article {
    width: 100%;
    /* Définissez une largeur de 100% pour occuper toute la largeur */
  }

  aside article:hover {
    border-bottom: 2px solid var(--ligh-black);
  }

  .logo-article {
    display: none;
  }

  .active {
    background-color: var(--hover);
    box-shadow: 0px 7px 0px 0px var(--fluo);
  }

  .active,
  .active a {
    color: var(--fluo);
  }

  .item:hover {
    background-color: var(--hover);
    color: var(--fluo);
    box-shadow: 0px 7px 0px 0px var(--fluo);
  }

  .item a:hover,
  a:hover {
    color: var(--fluo);
  }

  main {
    width: 100vw;
  }

  .mobile-td {
    display: none;
  }

  body {
    display: flex;
    flex-direction: column;
  }
}

@media screen and (max-width: 610px) {

  .home-item h1 {
    font-size: 15px;
  }

  .sorting {
    display: none;
  }

  .search {
    display: flex;
    flex-wrap: wrap;
  }
}

@media screen and (max-width: 580px) {
  input[type="text"] {
    width: 400px;
  }

  .main-sort {
    width: 400px;
    display: flex;
    justify-content: center;
  }

  select {
    display: none;
  }

}

/*
Animations:
*/

@-webkit-keyframes tracking-in-expand {
  0% {
    letter-spacing: -0.5em;
    opacity: 0;
  }

  40% {
    opacity: 0.6;
  }

  100% {
    opacity: 1;
  }
}

@keyframes tracking-in-expand {
  0% {
    letter-spacing: -0.5em;
    opacity: 0;
  }

  40% {
    opacity: 0.6;
  }

  100% {
    opacity: 1;
  }
}

